docs/content/v2.14/_index.md
---
title: YugabyteDB
description: YugabyteDB documentation is the best source to learn the most in-depth information about the YugabyteDB database, YugabyteDB Managed, and YugabyteDB Anywhere.
headcontent: Open source cloud-native distributed SQL database
weight: 1
type: indexpage
breadcrumbDisable: true
---

The PostgreSQL-compatible distributed database for your cloud native apps. Resilient, scalable, and flexible. As a cloud-native database, it can be deployed across public and private clouds as well as in Kubernetes environments.

{{< sections/2-boxes >}}
  {{< sections/bottom-image-box
    title="Get started locally on your laptop"
    description="Download and install YugabyteDB on your laptop, create a cluster, and build a sample application."
    buttonText="Quick Start"
    buttonUrl="/v2.14/quick-start/"
    imageAlt="Locally Laptop" imageUrl="/images/homepage/locally-laptop.svg"
  >}}

  {{< sections/bottom-image-box
    title="Explore distributed SQL"
    description="Explore the features of distributed SQL, with examples."
    buttonText="Explore"
    buttonUrl="/v2.14/explore/"
    imageAlt="Yugabyte cloud" imageUrl="/images/homepage/yugabyte-in-cloud.svg"
  >}}
{{< /sections/2-boxes >}}

## Develop for YugabyteDB

{{< sections/3-boxes>}}
  {{< sections/3-box-card
    title="Build a Hello World application"
    description="Use your favorite programming language to build an application that connects to a YugabyteDB cluster."
    buttonText="Build"
    buttonUrl="/v2.14/quick-start/build-apps/"
  >}}

  {{< sections/3-box-card
    title="Connect using drivers and ORMs"
    description="Connect applications to your database using familiar third-party divers and ORMs and YugabyteDB Smart Drivers."
    buttonText="Connect"
    buttonUrl="/v2.14/drivers-orms/"
  >}}

  {{< sections/3-box-card
    title="Use familiar APIs"
    description="Get up to speed quickly using YugabyteDB's PostgreSQL-compatible YSQL and Cassandra-based YCQL APIs."
    buttonText="Develop"
    buttonUrl="/v2.14/api/"
  >}}

{{< /sections/3-boxes >}}

## Get under the hood

{{< sections/3-boxes>}}
  {{< sections/3-box-card
    title="Architecture"
    description="Learn how YugabyteDB achieves consistency and high availability."
    buttonText="Learn More"
    buttonUrl="/v2.14/architecture/"
  >}}

  {{< sections/3-box-card
    title="Secure"
    description="Secure YugabyteDB with authentication, authorization, and encryption."
    buttonText="Secure"
    buttonUrl="/v2.14/secure/"
  >}}

  {{< sections/3-box-card
    title="Configure"
    description="Configure core database services."
    buttonText="Configure"
    buttonUrl="/v2.14/reference/configuration/"
  >}}

{{< /sections/3-boxes >}}

<div class="row">
