docs/content/v2.25/_index.md
---
title: YugabyteDB
description: YugabyteDB documentation is the best source to learn the most in-depth information about the YugabyteDB database, YugabyteDB Aeon, and YugabyteDB Anywhere.
headcontent: Open source cloud-native distributed SQL database
weight: 1
type: indexpage
breadcrumbDisable: true
---

YugabyteDB is an open source PostgreSQL-compatible distributed database for cloud native apps. Resilient, scalable, and flexible, it can be deployed across public and private clouds as well as in Kubernetes environments.

{{< sections/2-boxes >}}
  {{< sections/bottom-image-box
    title="Get started locally on your laptop"
    description="Download and install YugabyteDB on your laptop, create a cluster, and build a sample application."
    buttonText="Quick Start"
    buttonUrl="/stable/quick-start/macos/"
    imageAlt="Locally Laptop" imageUrl="/images/homepage/locally-laptop.svg"
  >}}

  {{< sections/bottom-image-box
    title="Explore distributed SQL"
    description="Explore the features of distributed SQL, with examples."
    buttonText="Explore"
    buttonUrl="/stable/explore/"
    imageAlt="Yugabyte cloud" imageUrl="/images/homepage/yugabyte-in-cloud.svg"
  >}}
{{< /sections/2-boxes >}}

## Develop for YugabyteDB

{{< sections/3-boxes>}}
  {{< sections/3-box-card
    title="Build a Hello World application"
    description="Use your favorite programming language to build an application that connects to a YugabyteDB cluster."
    buttonText="Build"
    buttonUrl="/stable/tutorials/build-apps/"
  >}}

  {{< sections/3-box-card
    title="Connect using drivers and ORMs"
    description="Connect applications to your database using familiar third-party divers and ORMs and YugabyteDB Smart Drivers."
    buttonText="Connect"
    buttonUrl="/stable/drivers-orms/"
  >}}

  {{< sections/3-box-card
    title="Use familiar APIs"
    description="Get up to speed quickly using YugabyteDB's PostgreSQL-compatible YSQL and Cassandra-based YCQL APIs."
    buttonText="Develop"
    buttonUrl="/stable/api/"
  >}}

{{< /sections/3-boxes >}}

## Get under the hood

{{< sections/3-boxes>}}
  {{< sections/3-box-card
    title="Architecture"
    description="Learn how YugabyteDB achieves consistency and high availability."
    buttonText="Learn More"
    buttonUrl="/stable/architecture/"
  >}}

  {{< sections/3-box-card
    title="Secure"
    description="Secure YugabyteDB with authentication, authorization, and encryption."
    buttonText="Secure"
    buttonUrl="/stable/secure/"
  >}}

  {{< sections/3-box-card
    title="Configure"
    description="Configure core database services."
    buttonText="Configure"
    buttonUrl="/stable/reference/configuration/"
  >}}

{{< /sections/3-boxes >}}
